--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,4 @@
 @tailwind base;
 @tailwind components;
+@import url(//db.onlinewebfonts.com/c/d2e53139489c87d8a93cec933f7ec773?family=Shabnam);
 @tailwind utilities
